<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Energy Calc</string>
    <string name="action_settings">Settings</string>
    <string name="tituloHoras">Horas/Dia</string>
    <string name="duplicar">Calcular</string>

    <string-array name="horas">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
    </string-array>
    <string-array name="dias">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <string name="tituloDias">Dias/Semana</string>
    <string name="totalHoras" />
    <string name="ValorNulo" />
    <string name="TamanhoFonte">17</string>
    <string name="nome_aparelho"></string>
    <string name="title_activity_novo_aparelho">NovoAparelho</string>
    <string name="hello_world">Hello world!</string>
    <string name="novo_aparelho">Novo Aparelho</string>
    <string name="voltar_inicio">Voltar</string>
    <string name="title_activity_resultado">Resultado</string>
    <string name="titulo_resultado">Resultado da estimativa:</string>
    <string name="consumo_aparelho" />
    <string name="gasto_total" />
    <string name="valor_cobrado" />

    <color name="fundo_titulo_resultado">#BABABA</color>

    <dimen name="texto_resultado">20dp</dimen>

    <string name="title_activity_ranking">Ranking</string>

</resources>
