<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TelaInicial" >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        
        android:layout_marginTop="60dp"
        android:text="@string/ValorNulo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ValorNulo"
        android:layout_below="@+id/calcular"
        android:layout_marginTop="15dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="22dp"
        android:text="@string/ValorNulo" />

    <EditText
        android:id="@+id/nome_aparelho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:inputType="text"
        android:text="@string/nome_aparelho" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/horas"
        android:layout_below="@+id/horas"
        android:layout_marginTop="15dp"
        android:text="@string/tituloDias" />

    <Spinner
        android:id="@+id/horas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="15dp"
        android:entries="@array/horas" />

    <Spinner
        android:id="@+id/dias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="16dp"
        android:entries="@array/dias" />

    <Button
        android:id="@+id/calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dias"
        android:layout_below="@+id/dias"
        android:layout_marginTop="27dp"
        android:text="@string/duplicar" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nome_aparelho"
        android:layout_marginTop="14dp"
        android:text="@string/tituloHoras" />

    <Button
        android:id="@+id/voltar_inicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/calcular"
        android:layout_alignBottom="@+id/calcular"
        android:layout_marginLeft="57dp"
        android:layout_toRightOf="@+id/calcular"
        android:text="@string/voltar_inicio" />

</RelativeLayout>